# AtlasSearch

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DOCKER_QUICKSTART.md  GENERATION_SUMMARY.md  LICENSE  README.md  STRUCTURE.md  WINDOWS_SETUP.md  docker-compose.yml
.github/workflows/: ci.yml
algorithms/: README.md
algorithms/cpp/: coin_change.cpp  detect_cycle.cpp  dijkstra_shortest_path.cpp  kadane_max_subarray.cpp  knapsack_01.cpp  longest_increasing_subsequence.cpp  longest_substring_no_repeat.cpp  lowest_common_ancestor.cpp  merge_intervals.cpp  top_k_elements.cpp  tree_bfs.cpp  tree_traversals.cpp  trie_autocomplete.cpp  two_sum.cpp  union_find.cpp
bench/: CMakeLists.txt  README.md  run_bench.sh
bench/src/: bench_tool.cpp
bfpnaggikhabdgbnhnngdfldkbinncdf/0.1.0_0/: Extpay.js  background.js  manifest.json  sidepanel.html  sidepanel.js
docs/: demo_script.md  design.md
services/consumer-service/: CMakeLists.txt  Dockerfile  README.md  config.yml
services/consumer-service/include/: consumer.h
services/consumer-service/src/: consumer.cpp  main.cpp
services/consumer-service/tests/: consumer_test.cpp
services/ingest-demo/: CMakeLists.txt  Dockerfile  README.md
services/ingest-demo/include/: ingest_server.h
services/ingest-demo/src/: ingest_server.cpp  main.cpp  producer_tool.cpp
services/ingest-demo/tests/: ingest_test.cpp
services/search-service/: CMakeLists.txt  Dockerfile  README.md
services/search-service/include/: search_service.h
services/search-service/src/: main.cpp  search_service.cpp
services/search-service/tests/: search_service_test.cpp
